--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "body-parser": "^1.15.0",
     "consign": "^0.1.4",
     "express": "^4.13.4",
+    "jwt-simple": "^0.4.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0",
     "sequelize": "^3.30.4",
     "sqlite": "^2.8.0"
   }
