--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "SET NODE_ENV=test mocha test/**/*.js",
     "start": "babel-node index.js"
   },
   "author": "",
@@ -20,5 +20,11 @@
     "passport-jwt": "^2.0.0",
     "sequelize": "^3.30.4",
     "sqlite": "^2.8.0"
+  },
+  "devDependencies": {
+    "babel-register": "^6.24.1",
+    "chai": "^3.5.0",
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0"
   }
 }
